[gd_scene load_steps=8 format=3 uid="uid://de8pbjay47e46"]

[ext_resource type="Script" uid="uid://b4fout3yjkh4" path="res://main.gd" id="1_h2yge"]
[ext_resource type="PackedScene" uid="uid://d1kphst6t2fxc" path="res://spaceship.tscn" id="1_ig7tw"]
[ext_resource type="PackedScene" uid="uid://dp48tk7ctl8s2" path="res://comets.tscn" id="2_1bvp3"]
[ext_resource type="Shader" uid="uid://dr4s25b4smy33" path="res://scroll_background.gdshader" id="3_lquwl"]
[ext_resource type="Texture2D" uid="uid://dh034g8tu7ikb" path="res://test/pexels-alex-andrews-271121-816608.jpg" id="4_lquwl"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_272bh"]
shader = ExtResource("3_lquwl")

[sub_resource type="Curve2D" id="Curve2D_ig7tw"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -104.58931, -60.981724, 0, 0, 0, 0, 536.06024, -60.981724, 0, 0, 0, 0, 533.19385, 840.2036)
}
point_count = 3

[node name="Main" type="Node"]
script = ExtResource("1_h2yge")
comet_scene = ExtResource("2_1bvp3")

[node name="TextureRect" type="TextureRect" parent="."]
texture_repeat = 2
material = SubResource("ShaderMaterial_272bh")
offset_left = -12.0
offset_top = -17.0
offset_right = 493.0
offset_bottom = 736.0
texture = ExtResource("4_lquwl")
expand_mode = 1

[node name="Spaceship" parent="." instance=ExtResource("1_ig7tw")]
position = Vector2(181, 95)

[node name="CometTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="ScoreTimer" type="Timer" parent="."]

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="StartPosition" type="Marker2D" parent="."]
position = Vector2(240, 450)

[node name="CometPath" type="Path2D" parent="."]
position = Vector2(107.97503, 40.856655)
scale = Vector2(0.69772935, 0.65358365)
curve = SubResource("Curve2D_ig7tw")

[node name="CometSpawn" type="PathFollow2D" parent="CometPath"]
position = Vector2(-104.58931, -60.981724)

[connection signal="hit" from="Spaceship" to="." method="_on_spaceship_hit"]
[connection signal="timeout" from="CometTimer" to="." method="_on_comet_timer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_score_timer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_start_timer_timeout"]
